adicao de novos

--- a/cartao_responsivel.html
+++ b/cartao_responsivel.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <a href="capa.html" class="">
+    <a href="index.html" class="">
          Inicio
   </a>
 
@@ -31,7 +31,7 @@
                 <div class="ul-icons">
                   <i class="fab fa-github"></i>
               </div>
-              <p class="recent-works-card-title">sou o homem mais feliz ao seu lado</p>
+              <p class="recent-works-card-title">sou o homem mais feliz do mundo ao seu lado</p>
               <p class="recent-works-card-content"> Obrigado por sempre estar ao meu lado amor, faça chuva ou faça sol...</p>
           </article>
       </div>
@@ -44,7 +44,7 @@
                 <div class="ul-icons">
                   <i class="fab fa-github"></i>
               </div>
-              <p class="recent-works-card-title">Guerreira</p>
+              <p class="recent-works-card-title">Guerreira </p>
               <p class="recent-works-card-content"> A pessoa mais determinada que eu conheço...</p>
             </article>
           </div>
@@ -64,7 +64,8 @@
   <a href="#a mais" class="button-default">Feliz aniversário amor! Te amo!</a>
 
 </section>
-    
+    <h1>Reproduzir</h1>
+    <audio src="./musica/Sailing - Telecasted.mp3" controls autoplay></audio>
   </body>
-  
+   
 </html>
