adicao de musica nova

--- a/cartao_responsivel.html
+++ b/cartao_responsivel.html
@@ -65,7 +65,7 @@
 
 </section>
     <h1>Reproduzir</h1>
-    <audio src="./musica/Sailing - Telecasted.mp3" controls autoplay></audio>
+    <audio src="./musica/Easy Seas - Chris Haugen.mp3" controls autoplay></audio>
   </body>
    
 </html>
